# geolocation-tools-workshop

./: .gitignore  Geocode_OSM.ipynb  README.md  pyproject.toml
Data/: Aust_Colonies.csv  Aust_Colony_Placename.csv  reference_location_data.csv
Notebooks/: Geocode_OSM.ipynb  accordion_test.ipynb  atap_geolocation_workshop.ipynb  format_refloc_data.ipynb  spacy_ner_introduction.ipynb
Scripts/: extractbooks.sh
Texts/: FtToHNL_APPENDIX.txt  FtToHNL_BOOK_1_CHAPTER_1.txt  FtToHNL_BOOK_1_CHAPTER_10.txt  FtToHNL_BOOK_1_CHAPTER_3.txt  FtToHNL_BOOK_1_CHAPTER_5.txt  FtToHNL_BOOK_1_CHAPTER_6.txt  FtToHNL_BOOK_1_CHAPTER_7.txt  FtToHNL_BOOK_1_CHAPTER_9.txt  FtToHNL_BOOK_2_CHAPTER_1.txt  FtToHNL_BOOK_2_CHAPTER_12.txt  FtToHNL_BOOK_2_CHAPTER_14.txt  FtToHNL_BOOK_2_CHAPTER_17.txt  FtToHNL_BOOK_2_CHAPTER_2.txt  FtToHNL_BOOK_2_CHAPTER_4.txt  FtToHNL_BOOK_2_CHAPTER_6.txt  FtToHNL_BOOK_2_CHAPTER_8.txt  FtToHNL_BOOK_3_CHAPTER_1.txt  FtToHNL_BOOK_3_CHAPTER_11.txt  FtToHNL_BOOK_3_CHAPTER_13.txt  FtToHNL_BOOK_3_CHAPTER_14.txt  FtToHNL_BOOK_3_CHAPTER_15.txt  FtToHNL_BOOK_3_CHAPTER_18.txt  FtToHNL_BOOK_3_CHAPTER_19.txt  FtToHNL_BOOK_3_CHAPTER_20.txt  FtToHNL_BOOK_3_CHAPTER_21.txt  FtToHNL_BOOK_3_CHAPTER_22.txt  FtToHNL_BOOK_3_CHAPTER_24.txt  FtToHNL_BOOK_3_CHAPTER_26.txt  FtToHNL_BOOK_3_CHAPTER_27.txt  FtToHNL_BOOK_3_CHAPTER_5.txt  FtToHNL_BOOK_3_CHAPTER_7.txt  FtToHNL_BOOK_4.txt  FtToHNL_BOOK_4_CHAPTER_12.txt  FtToHNL_BOOK_4_CHAPTER_13.txt  FtToHNL_BOOK_4_CHAPTER_14.txt  FtToHNL_BOOK_4_CHAPTER_15.txt  FtToHNL_BOOK_4_CHAPTER_16.txt  FtToHNL_BOOK_4_CHAPTER_18.txt  FtToHNL_BOOK_4_CHAPTER_5.txt  (+6 more)
(+54 files in other folders)
