[tool.poetry]
name = "geolocations"
version = "0.1.0"
description = ""
authors = ["Ben Foley <ben@cbmm.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
nltk = "^3.7"
geopandas = "^0.11.1"
Shapely = "^1.8.4"

[tool.poetry.group.dev.dependencies]
nbdime = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
